@@ -1,5 +1,10 @@
 2012-04-27         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* dfa.c: Sync with GNU grep.
+	* xalloc.h (xmemdup): Added, from grep, for dfa.c. Sigh.
+
+2012-04-27         Arnold D. Robbins     <arnold@skeeve.com>
+
 	Update to autoconf 2.69, automake 1.12.
 
 	* INSTALL, aclocal.m4, configh.in, depcomp, install-sh, missing,
